[project]
name = "dagster-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.19"
dependencies = [
    "dagster>=1.9.2",
    "dagster-webserver>=1.9.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "project.definitions"
project_name = "project"

[tool.setuptools.packages.find]
exclude=["project_tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
